--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: npsurvSS
 Type: Package
-Title: Sample Size and Power Calculation for Common Non-parametric Tests In
+Title: Sample Size and Power Calculation for Common Non-Parametric Tests in
  Survival Analysis
 Version: 1.0.0
 Authors@R: c(person("Godwin", "Yung", email="godwin.y.yung@gmail.com", role=c("aut", "cre")),
@@ -16,7 +16,7 @@ Description: A number of statistical tests have been proposed to compare two
   proportional hazards and to use the unweighted log-rank test for design and 
   analysis (Schoenfeld, 1981). This package provides sample size and power 
   calculation for all of the above statistical tests with allowance for 
-  flexible accrual, censoring, and survival (eg. weibull, piecewise-exponential, 
+  flexible accrual, censoring, and survival (eg. Weibull, piecewise-exponential, 
   mixture cure). Specific to the weighted log-rank test, users may specify which 
   approximations they wish to use to estimate the large-sample mean and variance. 
   The default option has been shown to provide substantial improvement over 
