--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: npsurvSS
 Type: Package
 Title: Sample Size and Power Calculation for Common Non-Parametric Tests in
  Survival Analysis
-Version: 1.0.0
+Version: 1.0.1
 Authors@R: c(person("Godwin", "Yung", email="godwin.y.yung@gmail.com", role=c("aut", "cre")),
   person("Yi", "Liu", email="yiliu4321@gmail.com", role=c("aut")))
 Author: Godwin Yung [aut, cre],
@@ -14,13 +14,15 @@ Description: A number of statistical tests have been proposed to compare two
   (or ratio of) restricted mean survival time, and the weighted log-rank test. 
   Despite the multitude of options, the convention in survival studies is to assume
   proportional hazards and to use the unweighted log-rank test for design and 
-  analysis (Schoenfeld, 1981). This package provides sample size and power 
+  analysis. This package provides sample size and power 
   calculation for all of the above statistical tests with allowance for 
   flexible accrual, censoring, and survival (eg. Weibull, piecewise-exponential, 
-  mixture cure). Specific to the weighted log-rank test, users may specify which 
-  approximations they wish to use to estimate the large-sample mean and variance. 
-  The default option has been shown to provide substantial improvement over 
-  Schoenfeld's conventional sample size and power equations (Yung and Liu, in press).
+  mixture cure). It is the companion R package to the paper by Yung and Liu (2019)
+  <doi:10.1111/biom.13196>. Specific to the weighted log-rank test, users may 
+  specify which approximations they wish to use to estimate the large-sample mean 
+  and variance. The default option has been shown to provide substantial
+  improvement over the conventional sample size and power equations based on Schoenfeld 
+  (1981) <doi:10.1093/biomet/68.1.316>.
 Depends: R (>= 3.4.0)
 Imports:
   stats,
